fix(doc): only show a scrollbar when needed
Only OSX hides the scrollbar when not needed. Other browsers will
display a "disabled" scrollbar.

--- a/docs/css/_documentation.sass
+++ b/docs/css/_documentation.sass
@@ -10,7 +10,7 @@
 
 .documentation-menu
   height: 100%
-  overflow-y: scroll
+  overflow-y: auto
   padding: 0
   font-size: 1.3em
   > ul
